--- a/myproject/index.html
+++ b/myproject/index.html
@@ -7,7 +7,7 @@
 <body>
 
 <h1>Hello world!</h1>
-<div><img src="220px-Tran_Phu" alt="Hello World from Space"
+<div><img src="220px-Tran_Phu.gif" alt="Hello World from Space"
 style="width:100%;max-width:960px"></div>
 <p>This is the first file in my new Git Repo.</p>
 <p>A new line in our file!</p>
