--- a/myproject/index.html
+++ b/myproject/index.html
@@ -8,7 +8,7 @@
 
 <h1>Hello world!</h1>
 <h2>Xin chao tat ca moi nguoi</h2>
-<div><img src="220px-Tran_Phu.gif" alt="Hello World from Space"
+<div><img src="img_hello_world.jpg" alt="Hello World from Space" style="width:100%;max-width:960px"></div>
 style="width:100%;max-width:960px"></div>
 <p>This is the first file in my new Git Repo.</p>
 <p>A new line in our file!</p>
