--- a/myproject/index.html
+++ b/myproject/index.html
@@ -7,12 +7,10 @@
 <body>
 
 <h1>Hello world!</h1>
-<h2>Xin chao tat ca moi nguoi</h2>
-<div><img src="img_hello_world.jpg" alt="Hello World from Space" style="width:100%;max-width:960px"></div>
+<div><img src="220px-Tran_Phu" alt="Hello World from Space"
 style="width:100%;max-width:960px"></div>
 <p>This is the first file in my new Git Repo.</p>
 <p>A new line in our file!</p>
-<div><img src="img_hello_git.jpg" alt="Hello Git" style="width:100%;max-width:640px"></div>
 
 </body>
 </html>
